# Deep_Research_Agent

./: README.md  pyproject.toml
src/deep_research_agent/: __init__.py  coordinator.py  main.py  model_setup.py
src/deep_research_agent/research_agents/: follow_up_agent.py  query_agents.py  search_agent.py  synthesis_agent.py
